--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 <style type="text/css">
 .underline { text-decoration: underline; }
 </style>
-<link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/3.0.0/css/reveal.css"/>
+<link rel="stylesheet" href="///cdn.jsdelivr.net/reveal.js/3.0.0/css/reveal.css"/>
 
-<link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/3.0.0/css/theme/sky.css" id="theme"/>
+<link rel="stylesheet" href="///cdn.jsdelivr.net/reveal.js/3.0.0/css/theme/sky.css" id="theme"/>
 
-<link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/3.0.0/lib/css/zenburn.css"/>
+<link rel="stylesheet" href="///cdn.jsdelivr.net/reveal.js/3.0.0/lib/css/zenburn.css"/>
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
     if( window.location.search.match( /print-pdf/gi ) ) {
         var link = document.createElement( 'link' );
         link.rel = 'stylesheet';
         link.type = 'text/css';
-        link.href = 'http://cdn.jsdelivr.net/reveal.js/3.0.0/css/print/pdf.css';
+        link.href = '///cdn.jsdelivr.net/reveal.js/3.0.0/css/print/pdf.css';
         document.getElementsByTagName( 'head' )[0].appendChild( link );
     }
 </script>
@@ -28,12 +28,12 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Visualizar17</h1><h2 class="author">Adolfo A. Bravo</h2><h2 class="date">2017-05-06 sáb 10:00</h2><p class="date">Created: 2017-11-17 vie 15:41</p>
+<section id="sec-title-slide"><h1 class="title">Visualizar17</h1><h2 class="author">Adolfo A. Bravo</h2><h2 class="date">2017-05-06 sáb 10:00</h2><p class="date">Created: 2017-11-17 vie 15:45</p>
 </section>
 
 <section>
-<section id="slide-org93c5b23">
-<h2 id="org93c5b23">Datalab</h2>
+<section id="slide-org536cb83">
+<h2 id="org536cb83">Datalab</h2>
 
 <div class="figure">
 <p><img src="https://github.com/medialab-prado/v17-presentacion/raw/master/img/logo-datalab.png" alt="logo-datalab.png" width="400px" /> 
@@ -43,8 +43,8 @@
 </section>
 </section>
 <section>
-<section id="slide-orgf34bae1">
-<h3 id="orgf34bae1">Actividades</h3>
+<section id="slide-org37390c4">
+<h3 id="org37390c4">Actividades</h3>
 <ul>
 <li>Taller de Producción de Periodismo de Datos <i>TPPD</i></li>
 <li>Taller de Visualización de Datos Visualizar <i>V</i></li>
@@ -58,14 +58,14 @@
 </section>
 </section>
 <section>
-<section id="slide-org061eb3a" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/visualizar17.jpg">
-<h2 id="org061eb3a">Medialab-Prado</h2>
+<section id="slide-org3d13b8f" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/visualizar17.jpg">
+<h2 id="org3d13b8f">Medialab-Prado</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-org67057c3">
-<h2 id="org67057c3">Visualizar'17: Migraciones</h2>
+<section id="slide-org304a3f6">
+<h2 id="org304a3f6">Visualizar'17: Migraciones</h2>
 <ul>
 <li>Taller Internacional de prototipado de proyectos de Visualización de Datos</li>
 <li>8 proyectos, 70 colaboradorxs</li>
@@ -79,8 +79,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org0d7b4b8">
-<h3 id="org0d7b4b8">Alianzas</h3>
+<section id="slide-orgc206817">
+<h3 id="orgc206817">Alianzas</h3>
 
 <div class="figure">
 <p><img src="https://github.com/medialab-prado/v17-presentacion/raw/master/img/alianzas.png" alt="alianzas.png" width="300px" />
@@ -98,8 +98,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org3f947f1">
-<h3 id="org3f947f1">Ponentes</h3>
+<section id="slide-org934aa6b">
+<h3 id="org934aa6b">Ponentes</h3>
 
 <div class="figure">
 <p><img src="https://github.com/medialab-prado/v17-presentacion/raw/master/img/ponentes-con-yuri.png" alt="ponentes-con-yuri.png" />
@@ -119,15 +119,15 @@
 </section>
 </section>
 <section>
-<section id="slide-org1e43e33" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/visualizar.gif">
-<h3 id="org1e43e33">Comunicación</h3>
+<section id="slide-orgc64efdc" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/visualizar.gif">
+<h3 id="orgc64efdc">Comunicación</h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org4936cc7">
-<h2 id="org4936cc7">Proyectos</h2>
+<section id="slide-orgd967aa9">
+<h2 id="orgd967aa9">Proyectos</h2>
 <ul>
 <li>Agrega.la: <a href="http://agrega.la">http://agrega.la</a></li>
 <li>Cerebros en movimiento: <a href="https://cerebrosenmovimiento.github.io/proyecto/index.html">https://cerebrosenmovimiento.github.io/proyecto/index.html</a></li>
@@ -142,8 +142,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org1a5bb64">
-<h2 id="org1a5bb64">Agrega.la</h2>
+<section id="slide-orgd8623e4">
+<h2 id="orgd8623e4">Agrega.la</h2>
 <ul>
 <li>Red presente en Brasil, Argentina, Colombia y México</li>
 <li>Tiene como objetivo promover la visibilización de contenidos y acciones entre medios independientes, libres o comunitarios.</li>
@@ -154,14 +154,14 @@
 </section>
 </section>
 <section>
-<section id="slide-orga6dde60" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/agregala.png">
-<h3 id="orga6dde60">agrega.la</h3>
+<section id="slide-orgf78e2c2" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/agregala.png">
+<h3 id="orgf78e2c2">agrega.la</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org00fc5b7">
-<h2 id="org00fc5b7">Cerebros en Movimiento</h2>
+<section id="slide-org732cc20">
+<h2 id="org732cc20">Cerebros en Movimiento</h2>
 <ul>
 <li>Orcid, plataforma digital creada en 2012.</li>
 <li>Facilita un identificador numérico único (ID) a cada investigador o científico que se registre gratuitamente.</li>
@@ -172,26 +172,26 @@
 </section>
 </section>
 <section>
-<section id="slide-org4fd8247" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/cerebros-en-movimiento.png">
-<h3 id="org4fd8247">cerebrosenmovimiento.github.io</h3>
+<section id="slide-orgde0f62d" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/cerebros-en-movimiento.png">
+<h3 id="orgde0f62d">cerebrosenmovimiento.github.io</h3>
 </section>
 </section>
 <section>
-<section id="slide-org2c0d706">
-<h2 id="org2c0d706">Historia de Zainab</h2>
-<div class="outline-text-2" id="text-org2c0d706">
+<section id="slide-org21d2cb6">
+<h2 id="org21d2cb6">Historia de Zainab</h2>
+<div class="outline-text-2" id="text-org21d2cb6">
 </div>
 </section>
 </section>
 <section>
-<section id="slide-org90edac9" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/historia-de-zainab.png">
-<h3 id="org90edac9">historiadezainab.org</h3>
+<section id="slide-orgb5cb913" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/historia-de-zainab.png">
+<h3 id="orgb5cb913">historiadezainab.org</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org96f4e16">
-<h2 id="org96f4e16">Mobilomics</h2>
+<section id="slide-orgbfeba97">
+<h2 id="orgbfeba97">Mobilomics</h2>
 <ul>
 <li>Estudia la relación entre la movilidad y la contaminación de un día cotidiano en Madrid</li>
 <li>20 septiembre 2017</li>
@@ -204,14 +204,14 @@
 </section>
 </section>
 <section>
-<section id="slide-org858d276" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/mobilomics.png">
-<h3 id="org858d276">medialab-prado.github.io/mobilomics/</h3>
+<section id="slide-orgc995366" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/mobilomics.png">
+<h3 id="orgc995366">medialab-prado.github.io/mobilomics/</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org0b0dc04">
-<h2 id="org0b0dc04">Población dirigida</h2>
+<section id="slide-orgb6b61d7">
+<h2 id="orgb6b61d7">Población dirigida</h2>
 <ul>
 <li>1939-1973, el Instituto Nacional de Colonización (INV) promovió la construcción en España de más de 300 pueblos.</li>
 <li>Creación de amplias zonas de regadío y el aumento de su productividad.</li>
@@ -225,14 +225,14 @@
 </section>
 </section>
 <section>
-<section id="slide-orgb96ce33" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/poblacion-dirigida.png">
-<h3 id="orgb96ce33">territoriodatos.org/poblacion-dirigida</h3>
+<section id="slide-org88ade79" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/poblacion-dirigida.png">
+<h3 id="org88ade79">territoriodatos.org/poblacion-dirigida</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgc384567">
-<h2 id="orgc384567">Planeta excedencia</h2>
+<section id="slide-org5024727">
+<h2 id="org5024727">Planeta excedencia</h2>
 <ul>
 <li>Un planeta de 40.500 personas que migran en 2016 por el cuidado personas a su cargo.</li>
 <li>Esta fórmula pretende conciliar la vida familiar y laboral.</li>
@@ -249,14 +249,14 @@
 </section>
 </section>
 <section>
-<section id="slide-org9a6de87" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/planeta-excedencia.png">
-<h3 id="org9a6de87">planetaexcedencia.es</h3>
+<section id="slide-orge9b7a77" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/planeta-excedencia.png">
+<h3 id="orge9b7a77">planetaexcedencia.es</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org755a8df">
-<h2 id="org755a8df">Soy de Temporada</h2>
+<section id="slide-orgc2b8443">
+<h2 id="orgc2b8443">Soy de Temporada</h2>
 <p>
 -Comer productos de temporada es bueno para tu salud, tu bolsillo y el medio ambiente.
 </p>
@@ -271,15 +271,15 @@
 </section>
 </section>
 <section>
-<section id="slide-orgd8690a1" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/soydetemporada.png">
-<h3 id="orgd8690a1">soydetemporada.es</h3>
+<section id="slide-orgd43254e" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/soydetemporada.png">
+<h3 id="orgd43254e">soydetemporada.es</h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org2538b4d">
-<h2 id="org2538b4d">Trackula</h2>
+<section id="slide-org2b11a93">
+<h2 id="org2b11a93">Trackula</h2>
 <ul>
 <li>Visualización interactiva de tu rastro en internet y de qué sitios web te rastrean a través de los contenidos que visitas cada día.</li>
 <li><a href="http://trackula.org">http://trackula.org</a></li>
@@ -298,15 +298,15 @@ Las setas son las páginas web que visitas conscientemente al navegar, y los pun
 </section>
 </section>
 <section>
-<section id="slide-orgcc276ee" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/trackula.png">
-<h3 id="orgcc276ee">trackula.org</h3>
+<section id="slide-org32192ac" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/trackula.png">
+<h3 id="org32192ac">trackula.org</h3>
 </section>
 </section>
 </div>
 </div>
 <p> Creado por adolflow. </p>
-<script src="http://cdn.jsdelivr.net/reveal.js/3.0.0/lib/js/head.min.js"></script>
-<script src="http://cdn.jsdelivr.net/reveal.js/3.0.0/js/reveal.js"></script>
+<script src="///cdn.jsdelivr.net/reveal.js/3.0.0/lib/js/head.min.js"></script>
+<script src="///cdn.jsdelivr.net/reveal.js/3.0.0/js/reveal.js"></script>
 
 <script>
 // Full list of configuration options available here:
@@ -338,10 +338,10 @@ multiplex: {
 
 // Optional libraries used to extend on reveal.js
 dependencies: [
- { src: 'http://cdn.jsdelivr.net/reveal.js/3.0.0/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
- { src: 'http://cdn.jsdelivr.net/reveal.js/3.0.0/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: 'http://cdn.jsdelivr.net/reveal.js/3.0.0/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: 'http://cdn.jsdelivr.net/reveal.js/3.0.0/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }]
+ { src: '///cdn.jsdelivr.net/reveal.js/3.0.0/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+ { src: '///cdn.jsdelivr.net/reveal.js/3.0.0/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+ { src: '///cdn.jsdelivr.net/reveal.js/3.0.0/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+ { src: '///cdn.jsdelivr.net/reveal.js/3.0.0/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }]
 });
 </script>
 </body>
