--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </style>
 <link rel="stylesheet" href="///cdn.jsdelivr.net/reveal.js/3.0.0/css/reveal.css"/>
 
-<link rel="stylesheet" href="///cdn.jsdelivr.net/reveal.js/3.0.0/css/theme/sky.css" id="theme"/>
+<link rel="stylesheet" href="///cdn.jsdelivr.net/reveal.js/3.0.0/css/theme/night.css" id="theme"/>
 
 <link rel="stylesheet" href="///cdn.jsdelivr.net/reveal.js/3.0.0/lib/css/zenburn.css"/>
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
@@ -23,17 +23,17 @@
         document.getElementsByTagName( 'head' )[0].appendChild( link );
     }
 </script>
-<meta name="description" content="Org-Reveal Introduction.">
+<meta name="description" content="Proyectos de Visualizar'17.">
 </head>
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Visualizar17</h1><h2 class="author">Adolfo A. Bravo</h2><h2 class="date">2017-05-06 sáb 10:00</h2><p class="date">Created: 2017-11-17 vie 15:45</p>
+<section id="sec-title-slide"><h1 class="title">Visualizar17</h1><h2 class="author">Adolfo A. Bravo</h2><h2 class="date">2017-11-17 vie 00:00</h2><p class="date">Created: 2017-11-17 vie 17:21</p>
 </section>
 
 <section>
-<section id="slide-org536cb83">
-<h2 id="org536cb83">Datalab</h2>
+<section id="slide-orgda67518">
+<h2 id="orgda67518">Datalab</h2>
 
 <div class="figure">
 <p><img src="https://github.com/medialab-prado/v17-presentacion/raw/master/img/logo-datalab.png" alt="logo-datalab.png" width="400px" /> 
@@ -43,8 +43,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org37390c4">
-<h3 id="org37390c4">Actividades</h3>
+<section id="slide-org689a563">
+<h3 id="org689a563">Actividades</h3>
 <ul>
 <li>Taller de Producción de Periodismo de Datos <i>TPPD</i></li>
 <li>Taller de Visualización de Datos Visualizar <i>V</i></li>
@@ -58,14 +58,14 @@
 </section>
 </section>
 <section>
-<section id="slide-org3d13b8f" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/visualizar17.jpg">
-<h2 id="org3d13b8f">Medialab-Prado</h2>
+<section id="slide-orgec11e78" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/visualizar17.jpg">
+<h2 id="orgec11e78">Medialab-Prado</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-org304a3f6">
-<h2 id="org304a3f6">Visualizar'17: Migraciones</h2>
+<section id="slide-orgdc75326">
+<h2 id="orgdc75326">Visualizar'17: Migraciones</h2>
 <ul>
 <li>Taller Internacional de prototipado de proyectos de Visualización de Datos</li>
 <li>8 proyectos, 70 colaboradorxs</li>
@@ -79,55 +79,27 @@
 </section>
 </section>
 <section>
-<section id="slide-orgc206817">
-<h3 id="orgc206817">Alianzas</h3>
-
-<div class="figure">
-<p><img src="https://github.com/medialab-prado/v17-presentacion/raw/master/img/alianzas.png" alt="alianzas.png" width="300px" />
-</p>
-</div>
-
-<ul>
-<li>PorCausa</li>
-<li>GVSIG</li>
-<li>Transeuropa Festival</li>
-<li>Haskell Group Madrid</li>
-
-</ul>
+<section id="slide-org6b86af0" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/alianzas.jpg">
+<h3 id="org6b86af0">Alianzas</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org934aa6b">
-<h3 id="org934aa6b">Ponentes</h3>
-
-<div class="figure">
-<p><img src="https://github.com/medialab-prado/v17-presentacion/raw/master/img/ponentes-con-yuri.png" alt="ponentes-con-yuri.png" />
-</p>
-</div>
-
-<ul>
-<li>Alba G. Corral</li>
-<li>Domestic Data Streamers</li>
-<li>Alison Killing</li>
-<li>Julie Freeman</li>
-<li>Álvaro Anguix</li>
-<li>Yuri Engelhardt</li>
-
-</ul>
+<section id="slide-orga70d409" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/ponentes-con-yuri.jpg">
+<h3 id="orga70d409">Ponentes</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgc64efdc" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/visualizar.gif">
-<h3 id="orgc64efdc">Comunicación</h3>
+<section id="slide-org4c10e0b" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/visualizar.gif">
+<h3 id="org4c10e0b">Comunicación</h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgd967aa9">
-<h2 id="orgd967aa9">Proyectos</h2>
+<section id="slide-orgfb52d9b">
+<h2 id="orgfb52d9b">Proyectos</h2>
 <ul>
 <li>Agrega.la: <a href="http://agrega.la">http://agrega.la</a></li>
 <li>Cerebros en movimiento: <a href="https://cerebrosenmovimiento.github.io/proyecto/index.html">https://cerebrosenmovimiento.github.io/proyecto/index.html</a></li>
@@ -142,8 +114,8 @@
 </section>
 </section>
 <section>
-<section id="slide-orgd8623e4">
-<h2 id="orgd8623e4">Agrega.la</h2>
+<section id="slide-orgffb0b3c">
+<h2 id="orgffb0b3c">Agrega.la</h2>
 <ul>
 <li>Red presente en Brasil, Argentina, Colombia y México</li>
 <li>Tiene como objetivo promover la visibilización de contenidos y acciones entre medios independientes, libres o comunitarios.</li>
@@ -154,14 +126,14 @@
 </section>
 </section>
 <section>
-<section id="slide-orgf78e2c2" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/agregala.png">
-<h3 id="orgf78e2c2">agrega.la</h3>
+<section id="slide-org4118dd4" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/agregala.png">
+<h3 id="org4118dd4">agrega.la</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org732cc20">
-<h2 id="org732cc20">Cerebros en Movimiento</h2>
+<section id="slide-org5e7d5c8">
+<h2 id="org5e7d5c8">Cerebros en Movimiento</h2>
 <ul>
 <li>Orcid, plataforma digital creada en 2012.</li>
 <li>Facilita un identificador numérico único (ID) a cada investigador o científico que se registre gratuitamente.</li>
@@ -172,26 +144,26 @@
 </section>
 </section>
 <section>
-<section id="slide-orgde0f62d" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/cerebros-en-movimiento.png">
-<h3 id="orgde0f62d">cerebrosenmovimiento.github.io</h3>
+<section id="slide-org2de24c2" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/cerebros-en-movimiento.png">
+<h3 id="org2de24c2">cerebrosenmovimiento.github.io</h3>
 </section>
 </section>
 <section>
-<section id="slide-org21d2cb6">
-<h2 id="org21d2cb6">Historia de Zainab</h2>
-<div class="outline-text-2" id="text-org21d2cb6">
+<section id="slide-orgc56e1ca">
+<h2 id="orgc56e1ca">Historia de Zainab</h2>
+<div class="outline-text-2" id="text-orgc56e1ca">
 </div>
 </section>
 </section>
 <section>
-<section id="slide-orgb5cb913" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/historia-de-zainab.png">
-<h3 id="orgb5cb913">historiadezainab.org</h3>
+<section id="slide-org2c6c83c" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/historia-de-zainab.png">
+<h3 id="org2c6c83c">historiadezainab.org</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgbfeba97">
-<h2 id="orgbfeba97">Mobilomics</h2>
+<section id="slide-orgc510db1">
+<h2 id="orgc510db1">Mobilomics</h2>
 <ul>
 <li>Estudia la relación entre la movilidad y la contaminación de un día cotidiano en Madrid</li>
 <li>20 septiembre 2017</li>
@@ -204,14 +176,14 @@
 </section>
 </section>
 <section>
-<section id="slide-orgc995366" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/mobilomics.png">
-<h3 id="orgc995366">medialab-prado.github.io/mobilomics/</h3>
+<section id="slide-orgb4898ea" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/mobilomics.png">
+<h3 id="orgb4898ea">medialab-prado.github.io/mobilomics/</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgb6b61d7">
-<h2 id="orgb6b61d7">Población dirigida</h2>
+<section id="slide-org69c1db7">
+<h2 id="org69c1db7">Población dirigida</h2>
 <ul>
 <li>1939-1973, el Instituto Nacional de Colonización (INV) promovió la construcción en España de más de 300 pueblos.</li>
 <li>Creación de amplias zonas de regadío y el aumento de su productividad.</li>
@@ -225,23 +197,18 @@
 </section>
 </section>
 <section>
-<section id="slide-org88ade79" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/poblacion-dirigida.png">
-<h3 id="org88ade79">territoriodatos.org/poblacion-dirigida</h3>
+<section id="slide-orgf227a8e" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/poblacion-dirigida.png">
+<h3 id="orgf227a8e">territoriodatos.org/poblacion-dirigida</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org5024727">
-<h2 id="org5024727">Planeta excedencia</h2>
+<section id="slide-orgfae2b8e">
+<h2 id="orgfae2b8e">Planeta excedencia</h2>
 <ul>
 <li>Un planeta de 40.500 personas que migran en 2016 por el cuidado personas a su cargo.</li>
 <li>Esta fórmula pretende conciliar la vida familiar y laboral.</li>
-
-</ul>
-<p>
-. Como norma general, se asegura el puesto de trabajo el primer año.
-</p>
-<ul>
+<li>Como norma general, se asegura el puesto de trabajo el primer año.</li>
 <li>¿Quiénes son sus habitantes?</li>
 <li>¿Se produce un retorno al mundo laboral?</li>
 
@@ -249,18 +216,16 @@
 </section>
 </section>
 <section>
-<section id="slide-orge9b7a77" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/planeta-excedencia.png">
-<h3 id="orge9b7a77">planetaexcedencia.es</h3>
+<section id="slide-org47b1027" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/planeta-excedencia.png">
+<h3 id="org47b1027">planetaexcedencia.es</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgc2b8443">
-<h2 id="orgc2b8443">Soy de Temporada</h2>
-<p>
--Comer productos de temporada es bueno para tu salud, tu bolsillo y el medio ambiente.
-</p>
+<section id="slide-org6b25cc9">
+<h2 id="org6b25cc9">Soy de Temporada</h2>
 <ul>
+<li>Comer productos de temporada es bueno para tu salud, tu bolsillo y el medio ambiente.</li>
 <li>Reduce las emisiones de CO2</li>
 <li>Apoyas la sostenibilidad de la tierra</li>
 <li>Consumes productos que han sido recogidos en su punto óptimo de maduración</li>
@@ -271,15 +236,15 @@
 </section>
 </section>
 <section>
-<section id="slide-orgd43254e" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/soydetemporada.png">
-<h3 id="orgd43254e">soydetemporada.es</h3>
+<section id="slide-orgf823d4d" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/soydetemporada.png">
+<h3 id="orgf823d4d">soydetemporada.es</h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org2b11a93">
-<h2 id="org2b11a93">Trackula</h2>
+<section id="slide-org267d31b">
+<h2 id="org267d31b">Trackula</h2>
 <ul>
 <li>Visualización interactiva de tu rastro en internet y de qué sitios web te rastrean a través de los contenidos que visitas cada día.</li>
 <li><a href="http://trackula.org">http://trackula.org</a></li>
@@ -298,13 +263,13 @@ Las setas son las páginas web que visitas conscientemente al navegar, y los pun
 </section>
 </section>
 <section>
-<section id="slide-org32192ac" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/trackula.png">
-<h3 id="org32192ac">trackula.org</h3>
+<section id="slide-orgb904974" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/trackula.png">
+<h3 id="orgb904974">trackula.org</h3>
 </section>
 </section>
 </div>
 </div>
-<p> Creado por adolflow. </p>
+<p> Creado por adolflow, Datalab. </p>
 <script src="///cdn.jsdelivr.net/reveal.js/3.0.0/lib/js/head.min.js"></script>
 <script src="///cdn.jsdelivr.net/reveal.js/3.0.0/js/reveal.js"></script>
 
