--- a/index.html
+++ b/index.html
@@ -28,23 +28,27 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Visualizar17</h1><h2 class="author">Adolfo A. Bravo</h2><h2 class="date">2017-11-17 vie 00:00</h2><p class="date">Created: 2017-11-17 vie 17:21</p>
-</section>
 
 <section>
-<section id="slide-orgda67518">
-<h2 id="orgda67518">Datalab</h2>
+<section id="slide-orgc26fca9">
+<h2 id="orgc26fca9">Visualizar'17</h2>
 
 <div class="figure">
 <p><img src="https://github.com/medialab-prado/v17-presentacion/raw/master/img/logo-datalab.png" alt="logo-datalab.png" width="400px" /> 
 </p>
 </div>
 
+<ul>
+<li>Uno de los proyectos del Datalab de Medialab-Prado</li>
+<li>Tercera edición en el edificio La Serrería Belga y tercera edición que coordino.</li>
+
+</ul>
+
 </section>
 </section>
 <section>
-<section id="slide-org689a563">
-<h3 id="org689a563">Actividades</h3>
+<section id="slide-orgee9d44e">
+<h3 id="orgee9d44e">Actividades</h3>
 <ul>
 <li>Taller de Producción de Periodismo de Datos <i>TPPD</i></li>
 <li>Taller de Visualización de Datos Visualizar <i>V</i></li>
@@ -58,48 +62,48 @@
 </section>
 </section>
 <section>
-<section id="slide-orgec11e78" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/visualizar17.jpg">
-<h2 id="orgec11e78">Medialab-Prado</h2>
+<section id="slide-org1ebd556" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/visualizar17.jpg">
+<h2 id="org1ebd556">Medialab-Prado</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-orgdc75326">
-<h2 id="orgdc75326">Visualizar'17: Migraciones</h2>
+<section id="slide-orge637279">
+<h2 id="orge637279">Visualizar'17: Migraciones</h2>
 <ul>
-<li>Taller Internacional de prototipado de proyectos de Visualización de Datos</li>
-<li>8 proyectos, 70 colaboradorxs</li>
-<li>10 ponentes, 12 mentorxs, 4 mediadorxs, 1 organizador, 2 apoyos.</li>
-<li>15 días: simposio, 2; taller, 12; descanso, 1; presentación: 1/2</li>
-<li>Convocatoria abierta de proyectos y colaboradorxs</li>
-<li>4 entidades colaboradoras.</li>
+<li class="fragment appear">Taller Internacional de prototipado de proyectos de Visualización de Datos</li>
+<li class="fragment appear">8 proyectos, 70 colaboradorxs</li>
+<li class="fragment appear">10 ponentes, 12 mentorxs, 4 mediadorxs, 1 organizador, 2 apoyos.</li>
+<li class="fragment appear">15 días: simposio, 2; taller, 12; descanso, 1; presentación: 1/2</li>
+<li class="fragment appear">Convocatoria abierta de proyectos y colaboradorxs</li>
+<li class="fragment appear">4 entidades colaboradoras.</li>
 
 </ul>
 
 </section>
 </section>
 <section>
-<section id="slide-org6b86af0" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/alianzas.jpg">
-<h3 id="org6b86af0">Alianzas</h3>
+<section id="slide-org52598e0" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/alianzas.jpg">
+<h3 id="org52598e0">Alianzas</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orga70d409" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/ponentes-con-yuri.jpg">
-<h3 id="orga70d409">Ponentes</h3>
+<section id="slide-org09ca02d" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/ponentes-con-yuri.jpg">
+<h3 id="org09ca02d">Ponentes</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org4c10e0b" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/visualizar.gif">
-<h3 id="org4c10e0b">Comunicación</h3>
+<section id="slide-org367f788" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/visualizar.gif">
+<h3 id="org367f788">Comunicación</h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgfb52d9b">
-<h2 id="orgfb52d9b">Proyectos</h2>
+<section id="slide-org1edc695">
+<h2 id="org1edc695">Proyectos</h2>
 <ul>
 <li>Agrega.la: <a href="http://agrega.la">http://agrega.la</a></li>
 <li>Cerebros en movimiento: <a href="https://cerebrosenmovimiento.github.io/proyecto/index.html">https://cerebrosenmovimiento.github.io/proyecto/index.html</a></li>
@@ -114,8 +118,8 @@
 </section>
 </section>
 <section>
-<section id="slide-orgffb0b3c">
-<h2 id="orgffb0b3c">Agrega.la</h2>
+<section id="slide-org628fdb5">
+<h2 id="org628fdb5">Agrega.la</h2>
 <ul>
 <li>Red presente en Brasil, Argentina, Colombia y México</li>
 <li>Tiene como objetivo promover la visibilización de contenidos y acciones entre medios independientes, libres o comunitarios.</li>
@@ -126,14 +130,14 @@
 </section>
 </section>
 <section>
-<section id="slide-org4118dd4" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/agregala.png">
-<h3 id="org4118dd4">agrega.la</h3>
+<section id="slide-org835c36f" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/agregala.png">
+<h3 id="org835c36f">agrega.la</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org5e7d5c8">
-<h2 id="org5e7d5c8">Cerebros en Movimiento</h2>
+<section id="slide-org72acc51">
+<h2 id="org72acc51">Cerebros en Movimiento</h2>
 <ul>
 <li>Orcid, plataforma digital creada en 2012.</li>
 <li>Facilita un identificador numérico único (ID) a cada investigador o científico que se registre gratuitamente.</li>
@@ -144,26 +148,26 @@
 </section>
 </section>
 <section>
-<section id="slide-org2de24c2" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/cerebros-en-movimiento.png">
-<h3 id="org2de24c2">cerebrosenmovimiento.github.io</h3>
+<section id="slide-orge05f001" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/cerebros-en-movimiento.png">
+<h3 id="orge05f001">cerebrosenmovimiento.github.io</h3>
 </section>
 </section>
 <section>
-<section id="slide-orgc56e1ca">
-<h2 id="orgc56e1ca">Historia de Zainab</h2>
-<div class="outline-text-2" id="text-orgc56e1ca">
+<section id="slide-orgc806847">
+<h2 id="orgc806847">Historia de Zainab</h2>
+<div class="outline-text-2" id="text-orgc806847">
 </div>
 </section>
 </section>
 <section>
-<section id="slide-org2c6c83c" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/historia-de-zainab.png">
-<h3 id="org2c6c83c">historiadezainab.org</h3>
+<section id="slide-org4382eed" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/historia-de-zainab.png">
+<h3 id="org4382eed">historiadezainab.org</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgc510db1">
-<h2 id="orgc510db1">Mobilomics</h2>
+<section id="slide-orgab67f87">
+<h2 id="orgab67f87">Mobilomics</h2>
 <ul>
 <li>Estudia la relación entre la movilidad y la contaminación de un día cotidiano en Madrid</li>
 <li>20 septiembre 2017</li>
@@ -176,14 +180,14 @@
 </section>
 </section>
 <section>
-<section id="slide-orgb4898ea" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/mobilomics.png">
-<h3 id="orgb4898ea">medialab-prado.github.io/mobilomics/</h3>
+<section id="slide-org642e453" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/mobilomics.png">
+<h3 id="org642e453">medialab-prado.github.io/mobilomics/</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org69c1db7">
-<h2 id="org69c1db7">Población dirigida</h2>
+<section id="slide-org5b97e84">
+<h2 id="org5b97e84">Población dirigida</h2>
 <ul>
 <li>1939-1973, el Instituto Nacional de Colonización (INV) promovió la construcción en España de más de 300 pueblos.</li>
 <li>Creación de amplias zonas de regadío y el aumento de su productividad.</li>
@@ -197,14 +201,14 @@
 </section>
 </section>
 <section>
-<section id="slide-orgf227a8e" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/poblacion-dirigida.png">
-<h3 id="orgf227a8e">territoriodatos.org/poblacion-dirigida</h3>
+<section id="slide-org846b85a" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/poblacion-dirigida.png">
+<h3 id="org846b85a">territoriodatos.org/poblacion-dirigida</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgfae2b8e">
-<h2 id="orgfae2b8e">Planeta excedencia</h2>
+<section id="slide-org50f4983">
+<h2 id="org50f4983">Planeta excedencia</h2>
 <ul>
 <li>Un planeta de 40.500 personas que migran en 2016 por el cuidado personas a su cargo.</li>
 <li>Esta fórmula pretende conciliar la vida familiar y laboral.</li>
@@ -216,14 +220,14 @@
 </section>
 </section>
 <section>
-<section id="slide-org47b1027" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/planeta-excedencia.png">
-<h3 id="org47b1027">planetaexcedencia.es</h3>
+<section id="slide-orgf4f4eaa" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/planeta-excedencia.png">
+<h3 id="orgf4f4eaa">planetaexcedencia.es</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org6b25cc9">
-<h2 id="org6b25cc9">Soy de Temporada</h2>
+<section id="slide-orgb8fea25">
+<h2 id="orgb8fea25">Soy de Temporada</h2>
 <ul>
 <li>Comer productos de temporada es bueno para tu salud, tu bolsillo y el medio ambiente.</li>
 <li>Reduce las emisiones de CO2</li>
@@ -236,15 +240,15 @@
 </section>
 </section>
 <section>
-<section id="slide-orgf823d4d" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/soydetemporada.png">
-<h3 id="orgf823d4d">soydetemporada.es</h3>
+<section id="slide-orga80ca56" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/soydetemporada.png">
+<h3 id="orga80ca56">soydetemporada.es</h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org267d31b">
-<h2 id="org267d31b">Trackula</h2>
+<section id="slide-org3ad56c4">
+<h2 id="org3ad56c4">Trackula</h2>
 <ul>
 <li>Visualización interactiva de tu rastro en internet y de qué sitios web te rastrean a través de los contenidos que visitas cada día.</li>
 <li><a href="http://trackula.org">http://trackula.org</a></li>
@@ -263,8 +267,33 @@ Las setas son las páginas web que visitas conscientemente al navegar, y los pun
 </section>
 </section>
 <section>
-<section id="slide-orgb904974" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/trackula.png">
-<h3 id="orgb904974">trackula.org</h3>
+<section id="slide-org1a39804" data-background="https://github.com/medialab-prado/v17-presentacion/raw/master/img/trackula.png">
+<h3 id="org1a39804">trackula.org</h3>
+
+
+</section>
+</section>
+<section>
+<section id="slide-org1985f9d">
+<h2 id="org1985f9d">Visualizar'18</h2>
+<ul>
+<li>Vamos a trabajar los datos personales</li>
+<li>Estamos tejiendo ahora las alianzas para mejorar todavía más el taller</li>
+<li>Si quieres colaborar:
+<ul>
+<li>adolfo@medialab-prado.es</li>
+<li>tw:@adolflow</li>
+<li>gh:@flowsta</li>
+
+</ul></li>
+
+</ul>
+
+</section>
+</section>
+<section>
+<section id="slide-org2e38ba9">
+<h2 id="org2e38ba9">Gracias</h2>
 </section>
 </section>
 </div>
